--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
@@ -9,7 +9,7 @@
 @code
 {
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading { get; set; }
+    public PageCascadingModel PageCascading { get; set; }
 
     [Parameter]
     public ComponentSchema Component { get; set; }
