--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -17,7 +17,7 @@
 
 @code {
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading { get; set; }
+    public PageCascadingModel PageCascading { get; set; }
 
     [SupplyParameterFromQuery(Name = "pt")]
     public int PageType { get; set; }
