--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
@@ -55,7 +55,7 @@
     private DesignPanel _designPanel;
 
     private PageSchema _pageSchema;
-    private PageModel _pageCascadingModel;
+    private PageCascadingModel _pageCascadingModel;
     private bool _isNewPage;
 
     protected override async Task OnInitializedAsync()
