--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
@@ -28,7 +28,7 @@
 
 @code {
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading { get; set; }
+    public PageCascadingModel PageCascading { get; set; }
 
     private ComponentSchema _component { get; set; }
 
