--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -13,5 +13,6 @@
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine.Model
 @using H.LowCode.MetaSchema
+@using H.LowCode.Model
 @using H.Extensions.System
 @using H.Util.Blazor
