--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
@@ -38,7 +38,7 @@
     public string PageId { get; set; }
 
     private PageSchema _pageSchema;
-    private PageModel _pageCascadingModel;
+    private PageCascadingModel _pageCascadingModel;
 
     protected override async Task OnParametersSetAsync()
     {
