--- a/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor
@@ -33,7 +33,7 @@ else
     public ComponentSchema Component { get; set; }
 
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading{ get; set; }
+    public PageCascadingModel PageCascading{ get; set; }
 
     /// <summary>
     /// 当前组件是否在根容器内
