--- a/src/Workbench/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
@@ -39,7 +39,7 @@
 
     private bool _visible = false;
     private Form<AppSchema> _form;
-    private AppSchema _appSchema = new AppSchema();
+    private AppSchema _appSchema = new();
 
     private async Task OnConfirm(MouseEventArgs e)
     {
