--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -37,7 +37,7 @@
 
 @code {
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading { get; set; }
+    public PageCascadingModel PageCascading { get; set; }
 
     [Parameter]
     public ComponentSchema Component { get; set; }
