--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
@@ -30,7 +30,7 @@
 @code {
     #region Parameter
     [CascadingParameter(Name = "pageCascading")]
-    public PageModel PageCascading { get; set; }
+    public PageCascadingModel PageCascading { get; set; }
 
     [Parameter]
     public ComponentSchema ContainerComponent { get; set; }
