新增 H.LowCode.PartsDesignEngine 物料设计器

--- a/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@page "/workbench"
 @namespace H.LowCode.Workbench
 
 <PageTitle>工作台 - H.LowCode</PageTitle>
@@ -82,9 +83,13 @@
             </GridRow>
             <GridRow Class="grid-space">
                 <GridCol Span="24">
-                    <Card Bordered="true" Class="card-space" Style="width:100%;">
-                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
-                    </Card>
+                    <p>物料设计示例 (快捷入口)：</p>
+                    <p>
+                        <a href="/designer/componentparts/newparts" target="_blank">组件物料设计器（新增）</a>
+                    </p>
+                    <p>
+                        <a href="/designer/pageparts/newparts" target="_blank">页面物料设计器（新增）</a>
+                    </p>
                 </GridCol>
             </GridRow>
         </GridCol>
